Fri Oct 24 10:22:15 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_findlock_or_tip): Don't worry about file ownership
	and nonstrict locking when returning the default branch or head.
	The most conspicuous problem with the old code is that in the
	error case it would examine rstat.st_uid when it had not been
	set.  For a discussion of more fundamental reasons, see comment.

	* admin.c (admin_fileproc): In handling -A, don't handle relative
	pathnames differently from absolute pathnames.  See comment for
	rationale.  If problem opening the file, give a nice error not a
	coredump.
	* sanity.sh (admin-19a-admin, admin-19a-log, admin-19a-fix):
	New tests, test for traditional "cvs admin -A" behavior with
	relative pathnames.
	* sanity.sh (admin-19a-nonexist): Test for the core dump fix.
	* sanity.sh (admin-22-o1): Look for ${PROG} not cvs.

	* sanity.sh (reserved-16): Remove commitinfo change with "cvs
	commit" not "cvs admin -o".  In addition to commit being The Right
	Thing on general principles, cvs admin -o doesn't work because it
	doesn't rebuild the administrative file database.

	* update.c (patch_file): If the first revision does not exist in
	the RCS file, fall back to sending entire file.  Fixes
	admin-22-o15 in make remotecheck.

1997-10-23  enami tsugutomo  <enami@but-b.or.jp>

	* rcs.c (RCS_checkin): Unlink temporary files stored in variable
	`tmpfile' and `changefile'.

Wed Oct 22 12:16:10 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (rcs_lockfilename): Allocate enough memory for terminating
	'\0'.

	* admin.c (admin_fileproc): Don't support '-' for ranges in "cvs
	admin -o".
	(admin): Adjust comment.

	* rcs.h (RCSVers): New field other_delta.
	* rcs.c (free_rcsvers_contents): Also free other_delta.
	(getdelta): Read newphrases from deltas into other_delta field.
	(putdelta): Write those newphrases.
	* sanity.sh (rcs-8a): New test, for this fix.
	* admin.c (admin_fileproc): If "-b" without argument, then set